# visualtools

./: CMakeLists.txt  LICENSE
src/: TODO.txt  coords.cpp  coords.h  display.cpp  display.h  gradient.cpp  gradient.h  main.cpp  shapes.cpp  shapes.h
